salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Number_of_PCI_Transfers__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_PCI_Transfers__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of transfers made to PCI Payment services</inlineHelpText>
    <label>Number of PCI Transfers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>