salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Number_of_Segments__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_Segments__c</fullName>
    <inlineHelpText>Indicates complexity of inbound interactions by counting discrete Key events for this summarised Call or Case (Key events include Queue, Talk, Hold, Retrieve, Transfer, Message, Recording, End).</inlineHelpText>
    <label>Number of Segments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>