salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Number_of_Transfers__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_Transfers__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of ACDTransfer events completed</description>
    <inlineHelpText>Number of times agents transferred the interaction they were handling to another agent, or to automation such as PCI or a Queue</inlineHelpText>
    <label>Number of Transfers</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>