salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Number_of_Transfers_to_Applet__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_Transfers_to_Applet__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of times an agent transferred the interaction to an applet/queue</inlineHelpText>
    <label>Number of Transfers to Applet</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>