salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Numeric_Wk_of_Year__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Numeric_Wk_of_Year__c</fullName>
    <formula>VALUE( NVMStatsSF__Week_of_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Simple numeric week of the year - useful for grouping in reports and charts</inlineHelpText>
    <label>Numeric Wk of Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>