salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__NVM_AgentID__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__NVM_AgentID__c</fullName>
    <inlineHelpText>ID of the Agent who received the Call</inlineHelpText>
    <label>NVM AgentID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>