salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__NVM_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__NVM_Telephone_Number__c</fullName>
    <inlineHelpText>The telephone number dialled by the Caller for inbound calls; the number presented for outbound calls</inlineHelpText>
    <label>NVM Telephone Number</label>
    <type>Phone</type>
</CustomField>