salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__PCI_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__PCI_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Time spent in PCI Payments in seconds</inlineHelpText>
    <label>PCI Time</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>