salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Post_Call_Automation__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Post_Call_Automation__c</fullName>
    <inlineHelpText>Duration of Applet events which took place after the agent left a Call (Especially Caller engaged in post Call survey. Tip: Label such Applets as POSTCALL in Call Plan Architect)</inlineHelpText>
    <label>Post Call Automation Segment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>