salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Queue_Duration__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Queue_Duration__c</fullName>
    <inlineHelpText>Total time inbound Caller spent queuing on this Call or the total time a Case queued</inlineHelpText>
    <label>Queue Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>