salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Queue_List__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Queue_List__c</fullName>
    <inlineHelpText>All Queues this Call/Case spent time in, in order, with the time in each. Format [Queue Name]-[Duration(s)], [Queue Name]-[Duration(s)],...</inlineHelpText>
    <label>Queue List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>