salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Queue_Name__c</fullName>
    <inlineHelpText>The name of the queue that this call was delivered to; the value &apos;Multiple&apos; denotes time spent in different named queues</inlineHelpText>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>