salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Recording_Duration__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Recording_Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total duration of the call recording of the inbound caller or outbound callee in seconds</inlineHelpText>
    <label>Recording Duration</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>