salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Related_To__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Related_To__c</fullName>
    <formula>IF(NOT(ISBLANK(NVMStatsSF__Related_Account__c)),NVMStatsSF__Related_Account__r.Name, 

IF(NOT(ISBLANK(NVMStatsSF__Related_Case__c)),NVMStatsSF__Related_Case__r.Account.Name, 

IF(NOT(ISBLANK(NVMStatsSF__Related_Opportunity__c)),NVMStatsSF__Related_Opportunity__r.Account.Name, 

IF(NOT(ISBLANK(NVMStatsSF__Related_Contact__r.Account.Name)),NVMStatsSF__Related_Contact__r.Account.Name, 

IF(NOT(ISBLANK(NVMStatsSF__Related_Contact__c)), NVMStatsSF__Related_Contact__r.FirstName + &quot; &quot; + NVMStatsSF__Related_Contact__r.LastName, 

IF(NOT(ISBLANK(NVMStatsSF__Related_Lead__c)), NVMStatsSF__Related_Lead__r.FirstName + &quot; &quot; + NVMStatsSF__Related_Lead__r.LastName,

&quot;-&quot;))))))</formula>
    <inlineHelpText>The Name of the Account if we know it from the Account, Case, Opportunity or Contact, otherwise the Contact&apos;s name or the Lead&apos;s name if we know either of those, otherwise &quot;-&quot;</inlineHelpText>
    <label>Related To</label>
    <type>Text</type>
</CustomField>