salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Ring_List__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Ring_List__c</fullName>
    <inlineHelpText>Delimited list of Agents and Ring times for each from which we derive number of agents tried and last ring time.</inlineHelpText>
    <label>Ring List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>