salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Server__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Server__c</fullName>
    <inlineHelpText>The Server/Cloud instance this Summary data was first retrieved from</inlineHelpText>
    <label>Server</label>
    <length>50</length>
    <type>Text</type>
</CustomField>