salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Skills_List__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Skills_List__c</fullName>
    <inlineHelpText>Comma delimited list of Skill Tags applied</inlineHelpText>
    <label>Skills List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>