salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Task_Link__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Task_Link__c</fullName>
    <formula>IF(NVMStatsSF__TaskExists__c, HYPERLINK(&quot;/&quot; &amp; NVMStatsSF__TaskID__c, &quot;Open Task&quot; , &quot;_blank&quot;),&quot;&quot;)</formula>
    <inlineHelpText>URL to open a new tab for the relates task if one exists</inlineHelpText>
    <label>Task Link</label>
    <type>Text</type>
</CustomField>