salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__TaskExists__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__TaskExists__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if a Salesforce Task exists for this call. ContactWorld injects Tasks for Outbound Calls + Agent answered Inbound ones; support cost to serve analysis. No Task if No Agent involvement</inlineHelpText>
    <label>TaskExists</label>
    <type>Checkbox</type>
</CustomField>