salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__TaskID__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__TaskID__c</fullName>
    <inlineHelpText>Related Task for this record - use this Id after the Salesforce Hostname as a path to the Task</inlineHelpText>
    <label>TaskID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>