salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Time_Zone__c</fullName>
    <inlineHelpText>Time Zone this event occurred in from the perspective of the last Agent (or the User who configured the Channel if no Agent worked the Call)</inlineHelpText>
    <label>Time Zone</label>
    <length>64</length>
    <type>Text</type>
</CustomField>