salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Total_Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Total_Call_Duration__c</fullName>
    <inlineHelpText>Total time elapsed between Call placement and Call disconnected. Excludes Wrap time</inlineHelpText>
    <label>Total Call Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>