salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Version__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Version__c</fullName>
    <inlineHelpText>Version number of the Package which created this Summary</inlineHelpText>
    <label>Version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>