salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Virtual_Queues__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Virtual_Queues__c</fullName>
    <inlineHelpText>Comma delimited list of Virtual Queues visited</inlineHelpText>
    <label>Virtual Queues</label>
    <length>255</length>
    <type>Text</type>
</CustomField>