salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Warm_Transfer_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Warm_Transfer_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total time 2 agents were connected while the Caller was on hold prior to transfers</description>
    <inlineHelpText>Total time 2 agents were connected while the Caller was on hold prior to transfers</inlineHelpText>
    <label>Warm Transfer Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>