salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Yr_Wk_Day_Hr__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Yr_Wk_Day_Hr__c</fullName>
    <description>Text-sortable format E.g. YYYY/08/6-Saturday/00 Use this field to group and sort Calls in reports</description>
    <formula>TEXT(YEAR(NVMStatsSF__Date__c)) + &apos;/&apos; +   RIGHT((&apos;0&apos; + NVMStatsSF__Week_of_Year__c),2) + &apos;/&apos; +  NVMStatsSF__Day_of_Week__c + &apos;/&apos; +  NVMStatsSF__Hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Text-sortable format E.g. YYYY/08/6-Saturday/00 Use this field to group and sort Calls in reports</inlineHelpText>
    <label>Yr/Wk/Day/Hr</label>
    <type>Text</type>
</CustomField>