salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/UTC_ISO_Week__c.field-meta.xml
<CustomField>
    <fullName>UTC_ISO_Week__c</fullName>
    <formula>LEFT(NVMStatsSF__UTC_ISO8601_Week__c, FIND(&quot;-&quot;, NVMStatsSF__UTC_ISO8601_Week__c, 6)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTC ISO Week</label>
    <type>Text</type>
</CustomField>