salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/recordTypes/NVMStatsSF__Outbound_Call.recordType-meta.xml
<RecordType>
    <fullName>NVMStatsSF__Outbound_Call</fullName>
    <active>true</active>
    <label>Outbound Call</label>
</RecordType>