salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/listViews/Transferred_Calls.listView-meta.xml
<ListView>
    <fullName>Transferred_Calls</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NVMStatsSF__Local_Date__c</field>
        <operation>equals</operation>
        <value>6/1/2021</value>
    </filters>
    <filters>
        <field>NVMStatsSF__Interaction_Type__c</field>
        <operation>equals</operation>
        <value>Inbound Call</value>
    </filters>
    <filters>
        <field>NVMStatsSF__Abandoned__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>NVMStatsSF__Number_of_Transfers__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NVMStatsSF__Agent2_ID__c</field>
        <operation>contains</operation>
        <value>0011,0012,0013,0016,0062</value>
    </filters>
    <label>Transferred Calls</label>
</ListView>